# JSRF-Bingo-Practice

./: .gitignore  LICENSE.txt  README.md  diff.txt  index.html  multinode-test.html  package-lock.json  package.json  popout.html  vite.config.js
assets/: app-BoD2obw1.js  core-CQQ2fP86.js  event-jjrqtED_.js  image-DNK7xb7J.js  index-Ce7DLMSL.js  index-CsAW0Szp.js  index-DWoo3p0t.js  index-DWwQ3Q3U.css  main--zfd3aDB.js  main-B0R_CSwn.css  main-BWbSosQZ.css  main-BgdA49ks.css  main-CLaoiVPo.js  main-CwtyrWCL.js  main-DCE4hJeu.css  main-DYkwZp-Y.css  main-OdWnnQ3I.js  main-eq7sk15c.js  main-kxtEf7hd.js  main-s292xtpE.css  multinodeTest-CoLydzAn.js  useMultinodeConnection-D3a-LLYK.js  window-DpWxOL_N.js
refs/: multinode.js
scripts/: drill-generator-report.mjs  generate-learning-video-manifest.mjs  generate-learning-video-manifest.test.js
scripts/data/: learning-video-title-aliases.json
src/: App.jsx  main.jsx  multinode-test.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BingopediaPanel.jsx  CompletionPanel.jsx  DrillCard.jsx  DustyBackdrop.jsx  FireworkBurst.jsx  Header.jsx  HistoryPanel.jsx  LearnPanel.jsx  LearningVideoPanel.jsx  ModeSelect.jsx  PopoutViewport.jsx  ProbabilityDistributionEditor.jsx  RouteCard.jsx  SegmentedChoice.jsx  SettingsPanel.jsx  SetupPanel.jsx  StatsPanel.jsx  index.js
src/data/: areaMeta.js  learnVideos.js  learnVideos.test.js  objectives.js  rawSquares.js
src/hooks/: useDesktopGlobalShortcuts.js  (+8 more)
(+112 files in other folders)
