[package]
name = "jsrf_bingo_trainer"
version = "0.1.0"
description = "JSRF Bingus Trainer desktop shell"
authors = ["bbussell"]
edition = "2021"

[lib]
name = "jsrf_bingo_trainer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-localhost = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.3.1"
